# rstbebe

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/: bad.rst  bad2.rst  good.rst  good_code_block.rst
src/rstbebe/: __main__.py  _checkers.py  _model.py
